added social network links and changed personal details

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <p class="lead mb-5">I am a computer science student at the University of Georgia. With a passion for problem-solving and a strong foundation in programming languages such as Java, Python, C, R and more. I am experienced in data analysis and software development and my projects have honed my technical skills. </p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/catherine-chu-a1b2c/"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="https://ahhchu.github.io/Portfolio/"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://github.com/ahhchu"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
             </section>
