--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
 <!---                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li> -->
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
+                    <li class="nav-item"><a class="nav-link" href="nmc.html">New Media Certificate</a></li>
                 </ul>
             </div>
         </nav>
@@ -48,7 +49,7 @@
                          · Athens, GA · (334) 296 1699 ·
                         <a href="catherinechu.cc@gmail.com">catherinechu.cc@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am a computer science student at the University of Georgia. With a passion for problem-solving and a strong foundation in programming languages such as Java, Python, C, R and more. I am experienced in data analysis, front end, and a focus on back end development. </p>
+                    <p class="lead mb-5">I am a computer science student at the University of Georgia. With a passion for problem-solving and a strong foundation in programming languages such as Java, Python, C, R and more. I am experienced in data engineering, front end, and a focus on back end development. </p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/catherine-chu-a1b2c/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/ahhchu"><i class="fab fa-github"></i></a>
@@ -69,15 +70,15 @@
                         <div class="flex-shrink-0"><span class="text-primary">June 2023 - July 2023</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                            <div class="flex-grow-1">
-                                <h3 class="mb-0">McBay Library Reference Assistant</h3>
-                                <div class="subheading mb-3">Univeristy of Georgia</div>
-                                <p>As a Reference Assistant at the McBay Library, I am dedicated to helping patrons effectively navigate and leverage the extensive resources available at the University of Georgia (UGA). My primary goal is to ensure a positive and enriching experience for all library users.</p>
-                            </div>
-                            <div class="flex-shrink-0"><span class="text-primary">June 2023 - July 2023</span></div>
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Technology Solutions Consultant Intern</h3>
+                            <div class="subheading mb-3">Credera</div>
+                            <p>As a summer computer science intern at Credera, I followed the entire machine learning lifecycle, from data processing and cleaning to building a model that effectively segmented the client's data to meet their goals. Additionally, I developed an ETL pipeline that ingested and loaded data into a centralized system, gaining valuable data engineering experience.</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">June 2024 - August 2024</span></div>
                     </div>
                     <div class="text-center">
-                        <img src="dist/assets/img/resume.jpg" alt="Your Resume" width="600" height="750">
+                        <img src="dist/assets/img/Resume-updated.png" alt="Your Resume" width="600" height="750">
                     </div>
             </section>
             <hr class="m-0" />
@@ -98,6 +99,7 @@
                         <div class="flex-grow-1">
                         <div class="subheading mb-3"> Relevant Coursework </div>
                         <p> <ul>
+                            <li>Software Engineering - React</li>
                             <li> Software Development - Java</li>
                             <li> Systems Programming - C </li>
                             <li> Data Structures - Java </li>
@@ -106,6 +108,7 @@
                             <li> Web Programming- - JS, CSS, HTML, Node.js, React</li>
                             <li> Advanced Web Development - JS, CSS, HTML, Node.js </li>
                             <li> Native App Development - Swift</li>
+                            <li>New Media Capstone - Swift</li>
                         </ul></p>
 
             </section>
