--- a/nmc.html
+++ b/nmc.html
@@ -44,17 +44,24 @@
             <ul>
                 <li>
                     NMIX 4020: Advanced Web Development 
-                    <a href="https://medium.com/@catchuuu2103/nmix-4020-cat-components-ef311f6e8059">Click here to read more</a>
-                    <img src="src/assets/img/course/4020.png" alt="web">
+                    <a href="https://medium.com/@catchuuu2103/nmix-4020-cat-components-ef311f6e8059">Click here to read more</a><br>
+                    <img src="src/assets/img/course/4020.png" alt="web" style="width: 800px; height: 200px;">
                 </li>
                 <li>
                     NMIX 4030: Native App Development 
-                    <a href="https://medium.com/@catchuuu2103/nmix-4030-learn-it-ba9d92ab8660">Click here to read more</a>
-                    <img src="src/assets/img/course/4030.png" alt="app">
+                    <a href="https://medium.com/@catchuuu2103/nmix-4030-learn-it-ba9d92ab8660">Click here to read more</a><br>
+                    <img src="src/assets/img/course/4030.png" alt="app" style="width: 800px; height: 200px;">
+                </li>
+                <li>
+                    NMIX 4410: New Media Capstone
+                    <a href="https://medium.com/@catchuuu2103/nmix-4410-new-media-capstone-f1d75e4e37c6">Click here to read more</a> <br>
+                    <img src="src/assets/img/course/4410.png" alt="cap" style="width: 800px; height: 200px;">
+                </li>
+                <li>
+                    NMIX 4012: TEDxUGA 
+                    <a href="https://medium.com/@catchuuu2103/nmix-4012-tedme-633729430449">Click here to read more</a> <br>
+                    <img src="src/assets/img/course/4012.png" alt="ted" style="width: 800px; height: 200px;">
                 </li>
                 <li>
                     NMIX 4210: New Media Industries
                 </li>
-                <li>
-                    NMIX 4012: TEDxUGA 
-                    <a href="http
