--- a/nmc/nmc.html
+++ b/nmc/nmc.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NMC Portfolio</title>
-    <link rel="stylesheet" href="dist/css/styles.css">
+    <link rel="stylesheet" href="../dist/css/styles.css">
 </head>
 <body style="margin: 0; padding: 0; display: flex; flex-direction: column; align-items: center; justify-content: center; text-align: center; min-height: 100vh;">
     <header>
         <nav>
             <ul style="list-style-type: none; padding: 0;">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
             </ul>
         </nav>
     </header>
@@ -19,7 +19,7 @@
     <main>
         <section>
             <h1>Catherine's New Media Certificate Journey</h1>
-            <img src="src/assets/img/course/ted.jpg">
+            <img src="../src/assets/img/course/ted.jpg">
             <br><br>
             <h2>New Media Certificate Summary</h2>
             <p style="max-width: 940px; margin: 0 auto; word-wrap: break-word; line-height: 1.6;">
@@ -45,22 +45,22 @@
                 <li>
                     NMIX 4020: Advanced Web Development 
                     <a href="https://medium.com/@catchuuu2103/nmix-4020-cat-components-ef311f6e8059">Click here to read more</a><br>
-                    <img src="src/assets/img/course/4020.png" alt="web" style="width: 800px; height: 200px;">
+                    <img src="../src/assets/img/course/4020.png" alt="web" style="width: 800px; height: 200px;">
                 </li>
                 <li>
                     NMIX 4030: Native App Development 
                     <a href="https://medium.com/@catchuuu2103/nmix-4030-learn-it-ba9d92ab8660">Click here to read more</a><br>
-                    <img src="src/assets/img/course/4030.png" alt="app" style="width: 800px; height: 200px;">
+                    <img src="../src/assets/img/course/4030.png" alt="app" style="width: 800px; height: 200px;">
                 </li>
                 <li>
                     NMIX 4410: New Media Capstone
                     <a href="https://medium.com/@catchuuu2103/nmix-4410-new-media-capstone-f1d75e4e37c6">Click here to read more</a> <br>
-                    <img src="src/assets/img/course/4410.png" alt="cap" style="width: 800px; height: 200px;">
+                    <img src="../src/assets/img/course/4410.png" alt="cap" style="width: 800px; height: 200px;">
                 </li>
                 <li>
                     NMIX 4012: TEDxUGA 
                     <a href="https://medium.com/@catchuuu2103/nmix-4012-tedme-633729430449">Click here to read more</a> <br>
-                    <img src="src/assets/img/course/4012.png" alt="ted" style="width: 800px; height: 200px;">
+                    <img src="../src/assets/img/course/4012.png" alt="ted" style="width: 800px; height: 200px;">
                 </li>
                 <li>
                     NMIX 4210: New Media Industries
