prettied it up a bit
- added medium button + link
- removed project section (i didn't like  layout plus it's in the NMC section)
- profile picture
- tweaked /nmc a bit but want to change project layout (the images)

--- a/nmc/index.html
+++ b/nmc/index.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <ul style="list-style-type: none; padding: 0;">
-                <li><a href="../index.html">Home</a></li>
+                <li><a href="../index.html">HOME</a></li>
             </ul>
         </nav>
     </header>
@@ -34,7 +34,7 @@
                 team to create an iOS app for the iPad using Apple's development tools.  
             <br><br>
                 This journey through the New Media Certificate not only strengthened my technical abilities but also allowed me to immerse myself more deeply in
-                technology, blending both creativity and technical expertise.
+                technology, blending both creativity and technical expertise. <a href="https://medium.com/@catchuuu2103/new-media-certificate-summary-a-narrative-of-my-journey-767ce69a6a57" >Read More...</a>
             </p>
         </section>
 
@@ -44,24 +44,24 @@
             <ul>
                 <li>
                     NMIX 4020: Advanced Web Development 
-                    <a href="https://medium.com/@catchuuu2103/nmix-4020-cat-components-ef311f6e8059">Click here to read more</a><br>
+                    <a href="https://medium.com/@catchuuu2103/nmix-4020-cat-components-ef311f6e8059">Read More...</a><br>
                     <img src="../src/assets/img/course/4020.png" alt="web" style="width: 800px; height: 200px;">
-                </li>
+                </li> <br><br>
                 <li>
                     NMIX 4030: Native App Development 
-                    <a href="https://medium.com/@catchuuu2103/nmix-4030-learn-it-ba9d92ab8660">Click here to read more</a><br>
+                    <a href="https://medium.com/@catchuuu2103/nmix-4030-learn-it-ba9d92ab8660">Read More...</a><br>
                     <img src="../src/assets/img/course/4030.png" alt="app" style="width: 800px; height: 200px;">
-                </li>
+                </li><br><br>
                 <li>
                     NMIX 4410: New Media Capstone
-                    <a href="https://medium.com/@catchuuu2103/nmix-4410-new-media-capstone-f1d75e4e37c6">Click here to read more</a> <br>
+                    <a href="https://medium.com/@catchuuu2103/nmix-4410-new-media-capstone-f1d75e4e37c6">Read More...</a> <br>
                     <img src="../src/assets/img/course/4410.png" alt="cap" style="width: 800px; height: 200px;">
-                </li>
+                </li><br><br>
                 <li>
                     NMIX 4012: TEDxUGA 
-                    <a href="https://medium.com/@catchuuu2103/nmix-4012-tedme-633729430449">Click here to read more</a> <br>
+                    <a href="https://medium.com/@catchuuu2103/nmix-4012-tedme-633729430449">Read More...</a> <br>
                     <img src="../src/assets/img/course/4012.png" alt="ted" style="width: 800px; height: 200px;">
-                </li>
+                </li><br><br>
                 <li>
                     NMIX 4210: New Media Industries
                 </li>
