--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
+                <!--<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>-->
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                 <!---                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li> -->
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
@@ -55,13 +55,14 @@
                     · Athens, GA · (334) 296 1699 ·
                     <a href="catherinechu.cc@gmail.com">catherinechu.cc@gmail.com</a>
                 </div>
-                <p class="lead mb-5">I am a computer science student at the University of Georgia. With a passion for
+                <p class="lead mb-5">Hi! I am a computer science student at the University of Georgia. With a passion for
                     problem-solving and a strong foundation in programming languages such as Java, Python, C, R and
                     more. I am experienced in data engineering, front end, and a focus on back end development. </p>
                 <div class="social-icons">
                     <a class="social-icon" href="https://www.linkedin.com/in/catherine-chu-a1b2c/"><i
                             class="fab fa-linkedin-in"></i></a>
                     <a class="social-icon" href="https://github.com/ahhchu"><i class="fab fa-github"></i></a>
+                    <a class="social-icon" href="https://medium.com/@catchuuu2103"><i class="fab fa-medium"></i></a>
                 </div>
             </div>
         </section>
@@ -133,50 +134,50 @@
 
         <hr class="m-0" />
 
-        <!-- Projects-->
-        <section class="resume-section" id="projects">
-            <div class="resume-section-content">
-                <h2 class="mb-5">Projects</h2>
+        <!--
+<section class="resume-section" id="projects">
+    <div class="resume-section-content">
+        <h2 class="mb-5">Projects</h2>
 
-                <!-- Project 01 -->
-                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                    <div class="flex-grow-1">
-                        <h3 class="mb-0">01 Cat Components</h3>
-                        <div class="subheading mb-3">NMIX 4020: Advanced Web Development</div>
-                        <p>A website that shows users about different cat breeds and their characteristics!</p>
-                        <a href="https://medium.com/@catchuuu2103/nmix-4020-cat-components-ef311f6e8059"
-                            target="_blank">Read more</a>
-                    </div>
-                    <div class="flex-shrink-0">
-                        <div style="border: 4px solid #6e775c; padding: 2px; display: inline-block;">
-                            <img src="dist/assets/img/Screenshot 2023-12-12 at 10.33.30 AM.png"
-                                alt="Cat Picker Screenshot" width="400" height="200">
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Project 02: Learn It -->
-                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                    <div class="flex-grow-1">
-                        <h3 class="mb-0">02 Learn It</h3>
-                        <div class="subheading mb-3">NMIX 4030: Native App Development</div>
-                        <p>A simple flashcards app that allows users to create flashcard sets and learn it!</p>
-                        <a href="https://medium.com/@catchuuu2103/nmix-4030-learn-it-ba9d92ab8660" target="_blank">Read
-                            more</a>
-                    </div>
-                    <div class="flex-shrink-0">
-                        <!-- Add the image for the Learn It project -->
-                        <div style="border: 4px solid #6e775c; padding: 2px; display: inline-block;">
-                            <img src="dist/assets/img/Simulator Screenshot - iPhone 14 Pro - 2023-12-12 at 10.28.47.png"
-                                alt="Learn It App Screenshot" width="200" height="400">
-                        </div>
-                    </div>
-                </div>
-
+        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+            <div class="flex-grow-1">
+                <h3 class="mb-0">01 Cat Components</h3>
+                <div class="subheading mb-3">NMIX 4020: Advanced Web Development</div>
+                <p>A website that shows users about different cat breeds and their characteristics!</p>
+                <a href="https://medium.com/@catchuuu2103/nmix-4020-cat-components-ef311f6e8059"
+                    target="_blank">Read more</a>
             </div>
-        </section>
+            <div class="flex-shrink-0">
+                <div style="border: 4px solid #6e775c; padding: 2px; display: inline-block;">
+                    <img src="dist/assets/img/Screenshot 2023-12-12 at 10.33.30 AM.png"
+                        alt="Cat Picker Screenshot" width="400" height="200">
+                </div>
+            </div>
+        </div>
 
-        <hr class="m-0" />
+        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+            <div class="flex-grow-1">
+                <h3 class="mb-0">02 Learn It</h3>
+                <div class="subheading mb-3">NMIX 4030: Native App Development</div>
+                <p>A simple flashcards app that allows users to create flashcard sets and learn it!</p>
+                <a href="https://medium.com/@catchuuu2103/nmix-4030-learn-it-ba9d92ab8660" target="_blank">Read
+                    more</a>
+            </div>
+            <div class="flex-shrink-0">
+                <div style="border: 4px solid #6e775c; padding: 2px; display: inline-block;">
+                    <img src="dist/assets/img/Simulator Screenshot - iPhone 14 Pro - 2023-12-12 at 10.28.47.png"
+                        alt="Learn It App Screenshot" width="200" height="400">
+                </div>
+            </div>
+        </div>
+
+    </div>
+</section>
+
+<hr class="m-0" />
+-->
+
+
 
         <!-- Skills-->
         <section class="resume-section" id="skills">
